--- a/searchers/s3_buckets_test_aws_fixture.yaml
+++ b/searchers/s3_buckets_test_aws_fixture.yaml
@@ -5,6 +5,8 @@ interactions:
     body: ""
     form: {}
     headers:
+      Accept-Encoding:
+      - identity
     url: https://s3.us-west-2.amazonaws.com/
     method: GET
   response:
