--- a/searchers/ec2_security_groups_test_aws_fixture.yaml
+++ b/searchers/ec2_security_groups_test_aws_fixture.yaml
@@ -2,21 +2,19 @@
 version: 1
 interactions:
 - request:
-    body: Action=DescribeSecurityGroups&Filter.1.Name=tag%3AName&Filter.1.Value.1=%2A%2A&Version=2016-11-15
+    body: Action=DescribeSecurityGroups&MaxResults=1000&NextToken=&Version=2016-11-15
     form:
       Action:
       - DescribeSecurityGroups
-      Filter.1.Name:
-      - tag:Name
-      Filter.1.Value.1:
-      - '**'
+      MaxResults:
+      - "1000"
+      NextToken:
+      - ""
       Version:
       - "2016-11-15"
     headers:
-      Content-Length:
-      - "97"
       Content-Type:
-      - application/x-www-form-urlencoded; charset=utf-8
+      - application/x-www-form-urlencoded
     url: https://ec2.us-west-2.amazonaws.com/
     method: POST
   response:
@@ -161,8 +159,8 @@ interactions:
                       <item>
                           <key>aws:cloudformation:logical-id</key>
                           <value>AWSEBSecurityGroup</value>
-                      </item>
-                      <item>
+              </item>
+              <item>
                           <key>aws:cloudformation:stack-name</key>
                           <value>awseb-e-0000000000-stack</value>
                       </item>
