--- a/searchers/rds_databases_test_aws_fixture.yaml
+++ b/searchers/rds_databases_test_aws_fixture.yaml
@@ -9,10 +9,8 @@ interactions:
       Version:
       - "2014-10-31"
     headers:
-      Content-Length:
-      - "45"
       Content-Type:
-      - application/x-www-form-urlencoded; charset=utf-8
+      - application/x-www-form-urlencoded
     url: https://rds.us-west-2.amazonaws.com/
     method: POST
   response:
